--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
 	<script type="text/javascript" src="Scripts/module.apiModule.js"></script>
 	<script type="text/javascript" src="Scripts/module.defaultClient.js"></script>
 
+
+	<link rel="stylesheet" href="Css/fluid_grid.css"/>
+	<link rel="stylesheet" href="Css/masparti-responsive.css"/>
+
+
 </head>
 <body>
 
