--- a/template.page.html
+++ b/template.page.html
@@ -3,45 +3,54 @@
 		background-color: yellowgreen;
 		margin: 1px;
 	}
-	.gdata-album h1{
+
+	.gdata-album h1 {
 		margin-bottom: 0px;
 	}
-	.gdata-album h3{
+
+	.gdata-album h3 {
 		margin-top: 0px;
 	}
-	.gdata-album .first-image{
-		border: 1px solid red;
+
+	.gdata-album .first-image {
+
 	}
 
+	.xxx{
+	}
 </style>
 
-<div ng-repeat="gridelement in page.GridElements">
-	<div  class="box">
-	<div gridelement="gridelement" ></div>
-	<div>&nbsp;</div>
+<div class="container_12">
+
+	<div ng-repeat="gridelement in page.GridElements">
+		<div gridelement="gridelement"></div>
+		<div>&nbsp;</div>
 	</div>
 </div>
 
 <script id="text.thtml" type="text/ng-template"><div>
-	template TEXT :
-	{{gridelement.Resources.text.Value}}
+		template TEXT :
+		{{gridelement.Resources.text.Value}}
 	</div>
 </script>
 
 
 <script id="gdataalbum.thtml" type="text/ng-template"><div>
-		<div class="gdata-album" ng-controller="gridelementGdataAlbumCtrl" >
+		<div class="gdata-album" ng-controller="gridelementGdataAlbumCtrl">
 			<h1>{{gridelement.Resources.header.Value}}</h1>
+
 			<h3>{{gridelement.Resources.text.Value}}</h3>
-			<div class="first-image">
-				<img ngc-lazy-image="firstPhoto.Large.PhotoUri" />
+
+			<div class="first-image grid_3 xxx" class="">
+				<img ngc-lazy-image="firstPhoto.Large.PhotoUri"/>
 			</div>
-			<div style="height:410px">
-			<span ng-repeat="photo in gdataAlbumPhotos">
-				<img ngc-lazy-image="photo.Small.PhotoUri" />
-			</span>
+			<div class="grid_9 xxx" >
+				<span ng-repeat="photo in gdataAlbumPhotos">
+					<img ngc-lazy-image="photo.Small.PhotoUri"/>
+				</span>
 			</div>
 		</div>
+		<div class="clear"></div>
 	</div>
 </script>
 
