--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
 	<script type="text/javascript" src="Scripts/controller.home.js"></script>
 	<script type="text/javascript" src="Scripts/controller.page.js"></script>
+	<script type="text/javascript" src="Scripts/controller.login.js"></script>
 	<script type="text/javascript" src="Scripts/controller.gridelementGdataAlbumCtrl.js"></script>
 
 	<script type="text/javascript" src="Scripts/module.appConfig.js"></script>
