--- a/template.login.html
+++ b/template.login.html
@@ -1,1 +1,13 @@
-lbjkasdjklbasjkbd login
+
+<div>
+	login
+	<input ng-model="UserName"/>
+</div>
+<div>
+	heslo
+	<input ng-model="Password" type="password"/>
+</div>
+
+{{RequestToken}}
+
+<button type="submit" ng-click="submit()">login</button>
