--- a/template.login.html
+++ b/template.login.html
@@ -8,6 +8,6 @@
 	<input ng-model="Password" type="password"/>
 </div>
 
-{{RequestToken}}
+<input ng-model="RequestToken" />
 
 <button type="submit" ng-click="submit()">login</button>
