--- a/index.html
+++ b/index.html
@@ -30,9 +30,12 @@
 	<link rel="stylesheet" href="Css/fluid_grid.css"/>
 	<link rel="stylesheet" href="Css/masparti-responsive.css"/>
 
-
 </head>
 <body>
+<a href="#/login">login</a>
+<a href="/ClientPhp/Service/logout.php">logout</a>
+<br />
+<br />
 
 <div ng-view></div>
 
