--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
 
 	<link rel="stylesheet" href="Css/fluid_grid.css"/>
 	<link rel="stylesheet" href="Css/masparti-responsive.css"/>
+	<link rel="stylesheet" href="Css/metro-bootstrap.css"/>
+	<link rel="stylesheet" href="Css/main.css"/>
 
 </head>
 <body>
