--- a/template.page.html
+++ b/template.page.html
@@ -28,6 +28,13 @@
 	</div>
 </div>
 
+		<div>
+			bsjdbj
+			<button ng-click="post()">post</button>
+
+		</div>
+
+
 <script id="text.thtml" type="text/ng-template"><div>
 		template TEXT :
 		{{gridelement.Resources.text.Value}}
