--- a/index.html
+++ b/index.html
@@ -36,8 +36,9 @@
 <body>
 <a href="#/login">login</a>
 <a href="/ClientPhp/Service/logout.php">logout</a>
-<br />
-<br />
+<a href="#/home">home</a>
+<br/>
+<br/>
 
 <div ng-view></div>
 
