--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 	<script type="text/javascript" src="Scripts/controller.home.js"></script>
 	<script type="text/javascript" src="Scripts/controller.page.js"></script>
 	<script type="text/javascript" src="Scripts/controller.login.js"></script>
+	<script type="text/javascript" src="Scripts/controller.userDataForm.js"></script>
 	<script type="text/javascript" src="Scripts/controller.gridelementGdataAlbumCtrl.js"></script>
 
 	<script type="text/javascript" src="Scripts/module.appConfig.js"></script>
