--- a/template.page.html
+++ b/template.page.html
@@ -24,6 +24,10 @@
 </style>
 
 <div class="container_12">
+	<div class="alert alert-error" ng-show="message">
+		<b>Chyba:</b>
+		{{message}}
+	</div>
 
 	<div ng-repeat="gridelement in page.GridElements">
 		<div gridelement="gridelement"></div>
@@ -31,68 +35,67 @@
 	</div>
 </div>
 
-<div>
-
-<ul>
-	<li>
-		<form name="myForm" ng-controller="userDataForm" ng-submit="post()">
-			<h3>1</h3>
-			<div>
-				<input type="text" name="key" ng-model="key" placeholder="key" value="bjkasdjkb">
-			</div>
-			<div>
-				<input type="text" name="keywords" ng-model="data.jmeno" placeholder="jmeno" required> *
-			</div>
-			<div>
-				<input type="text" name="desc" ng-model="data.prijmeni" placeholder="prijmeni">
-			</div>
-			<button type="submit">Ok</button>
-			<button ng-click="xx()">xxx</button>
-		</form>
-	</li>
-	<li>
-		<h3>2</h3>
-		<form ng-controller="userDataForm" ng-submit="post()">
-			<div>
-				<input type="text" name="key" ng-model="key" placeholder="key" value="dalsi form ">
-			</div>
-			<div>
-				<input type="text" name="keywords" ng-model="data.keywords">
-			</div>
-			<div>
-				<input type="text" name="keywords" ng-model="data.keywords">
-			</div>
-			<div>
-				<input type="text" name="keywords" ng-model="data.keywords">
-			</div>
-			<div>
-				<input type="checkbox" name="desc" ng-model="data.checkbox">
-			</div>
-			<button type="submit">Ok</button>
-		</form>
-	</li>
-	<li>
-		<h3>3</h3>
-		<form ng-controller="userDataForm" ng-submit="post()">
-			<div>
-				<input type="text" name="key" ng-model="key" placeholder="key">
-			</div>
-			<div>
-				<input type="text" name="keywords" ng-model="data.keywords">
-			</div>
-			<div>
-				<input type="text" name="desc" ng-model="data.desc">
-			</div>
-			<button type="submit">Ok</button>
-		</form>
-	</li>
-
-</ul>
-
-</div>
 
 <script id="text.thtml" type="text/ng-template"><div>
 		{{gridelement.Resources.text.Value}}
+	</div>
+</script>
+<script id="clientspecificxxx.thtml" type="text/ng-template"><div>
+	<ul>
+		<li>
+			<form name="myForm" ng-controller="userDataForm" ng-submit="post()">
+				<h3>1</h3>
+				<div>
+					<input type="text" name="key" ng-model="key" placeholder="key" value="bjkasdjkb">
+				</div>
+				<div>
+					<input type="text" name="keywords" ng-model="data.jmeno" placeholder="jmeno" required> *
+				</div>
+				<div>
+					<input type="text" name="desc" ng-model="data.prijmeni" placeholder="prijmeni">
+				</div>
+				<button type="submit">Ok</button>
+				<button ng-click="xx()">xxx</button>
+			</form>
+		</li>
+		<li>
+			<h3>2</h3>
+			<form ng-controller="userDataForm" ng-submit="post()">
+				<div>
+					<input type="text" name="key" ng-model="key" placeholder="key" value="dalsi form ">
+				</div>
+				<div>
+					<input type="text" name="keywords" ng-model="data.keywords">
+				</div>
+				<div>
+					<input type="text" name="keywords" ng-model="data.keywords">
+				</div>
+				<div>
+					<input type="text" name="keywords" ng-model="data.keywords">
+				</div>
+				<div>
+					<input type="checkbox" name="desc" ng-model="data.checkbox">
+				</div>
+				<button type="submit">Ok</button>
+			</form>
+		</li>
+		<li>
+			<h3>3</h3>
+			<form ng-controller="userDataForm" ng-submit="post()">
+				<div>
+					<input type="text" name="key" ng-model="key" placeholder="key">
+				</div>
+				<div>
+					<input type="text" name="keywords" ng-model="data.keywords">
+				</div>
+				<div>
+					<input type="text" name="desc" ng-model="data.desc">
+				</div>
+				<button type="submit">Ok</button>
+			</form>
+		</li>
+
+	</ul>
 	</div>
 </script>
 
