--- a/index.html
+++ b/index.html
@@ -4,13 +4,11 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>masparti</title>
+	<title>Default PHP Client</title>
 
-	<script type="text/javascript" src="Scripts/JSLINQ.js"></script>
-	<script type="text/javascript" src="Scripts/jquery.js"></script>
-	<script type="text/javascript" src="Scripts/angular.js"></script>
-	<script type="text/javascript" src="Scripts/angular-ui.js"></script>
-	<script type="text/javascript" src="Scripts/angular-resource.js"></script>
+	<script type="text/javascript" src="Scripts/jquery.min.js"></script>
+	<script type="text/javascript" src="Scripts/angular.min.js"></script>
+	<script type="text/javascript" src="Scripts/angular-resource.min.js"></script>
 
 	<script type="text/javascript" src="Scripts/class.apiWrapper.js"></script>
 
@@ -22,6 +20,7 @@
 	<script type="text/javascript" src="Scripts/controller.login.js"></script>
 	<script type="text/javascript" src="Scripts/controller.userDataForm.js"></script>
 	<script type="text/javascript" src="Scripts/controller.gridelementGdataAlbumCtrl.js"></script>
+	<script type="text/javascript" src="Scripts/controller.simplehtml.js"></script>
 
 	<script type="text/javascript" src="Scripts/module.appConfig.js"></script>
 	<script type="text/javascript" src="Scripts/module.apiModule.js"></script>
@@ -34,15 +33,26 @@
 
 </head>
 <body>
-<a href="#/login">login</a>
-<a href="/ClientPhp/Service/logout.php">logout</a>
-<a href="#/home">home</a>
-<br/>
-<br/>
 
-<div ng-view></div>
+<div class="container_12">
+	<div class="btn-group">
+		<a class="btn" href="#/home"></i>home</a>
+		<a class="btn" href="#/login">login</a>
+		<a class="btn" href="/ClientPhp/Service/logout.php">logout</a>
+	</div>
+
+	<div class="alert alert-error" ng-show="message">
+		<b>Chyba:</b>
+		{{message}}
+	</div>
+
+	<div ng-view></div>
+
+</div>
+
 
 </body>
+<script type="text/javascript" src="Scripts/showdown.js"></script>
 
 </html>
 
