--- a/template.home.html
+++ b/template.home.html
@@ -1,3 +1,3 @@
 <div ng-repeat="grid in pages">
-	<a href="#/page/{{grid.Link}}">{{grid.Name}}</a>
+	<h3><a href="#/page/{{grid.Link}}">{{grid.Name}}</a></h3>
 </div>
