--- a/template.page.html
+++ b/template.page.html
@@ -1,9 +1,4 @@
 <style>
-	.box {
-		background-color: yellowgreen;
-		margin: 1px;
-	}
-
 	.gdata-album h1 {
 		margin-bottom: 0px;
 	}
@@ -23,16 +18,14 @@
 	}
 </style>
 
-<div class="container_12">
-	<div class="alert alert-error" ng-show="message">
-		<b>Chyba:</b>
-		{{message}}
-	</div>
+<div class="alert alert-error" ng-show="message">
+	<b>Chyba:</b>
+	{{message}}
+</div>
 
-	<div ng-repeat="gridelement in page.GridElements">
-		<div gridelement="gridelement"></div>
-		<div>&nbsp;</div>
-	</div>
+<div ng-repeat="gridelement in page.GridElements">
+	<div gridelement="gridelement"></div>
+	<hr />
 </div>
 
 
@@ -40,6 +33,12 @@
 		{{gridelement.Resources.text.Value}}
 	</div>
 </script>
+
+<script id="simplehtml.thtml" type="text/ng-template"><div ng-controller="simplehtml">
+	<div ng-bind-html-unsafe="ContentToHtml()"></div>
+	</div>
+</script>
+
 <script id="clientspecificxxx.thtml" type="text/ng-template"><div>
 	<ul>
 		<li>
@@ -96,6 +95,7 @@
 		</li>
 
 	</ul>
+	<div class="clearfix"></div>
 	</div>
 </script>
 
