--- a/template.page.html
+++ b/template.page.html
@@ -39,7 +39,7 @@
 	</div>
 </script>
 
-<script id="clientspecificxxx.thtml" type="text/ng-template"><div>
+<script id="clientspecificpostdataform.thtml" type="text/ng-template"><div>
 	<ul>
 		<li>
 			<form name="myForm" ng-controller="userDataForm" ng-submit="post()">
