--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 	<div class="btn-group">
 		<a class="btn" href="#/home"></i>home</a>
 		<a class="btn" href="#/login">login</a>
-		<a class="btn" href="/ClientPhp/Service/logout.php">logout</a>
+		<a class="btn" href="Service/logout.php">logout</a>
 	</div>
 
 	<div class="alert alert-error" ng-show="message">
