--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Default PHP Client</title>
 
-	<script type="text/javascript" src="Scripts/jquery.min.js"></script>
-	<script type="text/javascript" src="Scripts/angular.min.js"></script>
-	<script type="text/javascript" src="Scripts/angular-resource.min.js"></script>
+	<script type="text/javascript" src="Scripts/libs/jquery.min.js"></script>
+	<script type="text/javascript" src="Scripts/libs/angular.min.js"></script>
+	<script type="text/javascript" src="Scripts/libs/angular-resource.min.js"></script>
 
 	<script type="text/javascript" src="Scripts/class.apiWrapper.js"></script>
 
