--- a/template.page.html
+++ b/template.page.html
@@ -1,32 +1,10 @@
-<style>
-	.gdata-album h1 {
-		margin-bottom: 0px;
-	}
-
-	.gdata-album h3 {
-		margin-top: 0px;
-	}
-
-	.gdata-album .first-image {
-
-	}
-
-	ul li {
-		display: block;
-		float: left;
-		margin-left: 30px;
-	}
-</style>
-
-<div class="alert alert-error" ng-show="message">
-	<b>Chyba:</b>
-	{{message}}
-</div>
-
 <div ng-repeat="gridelement in page.GridElements">
+
 	<div gridelement="gridelement"></div>
 	<hr />
 </div>
+
+<div ng-include="'template.galleryImageViewer.html'"></div>
 
 
 <script id="text.thtml" type="text/ng-template"><div>
@@ -99,23 +77,84 @@
 	</div>
 </script>
 
+
+<style>
+	.gdata-album h1 {
+		margin-bottom: 0px;
+	}
+
+	.gdata-album h3 {
+		margin-top: 0px;
+	}
+
+	.gdata-album .first-image {
+
+	}
+
+	ul li {
+		display: block;
+		float: left;
+		margin-left: 30px;
+	}
+	.image-small {
+		display: inline-block;
+		padding: 0 10px 10px 0;
+	}
+</style>
+<style>
+	.dumbBoxWrap { /* The div that shows/hides. */
+		z-index:40001; /* High z-index to ensure it appears above all content */
+		position: absolute;
+		top:0;
+		left:0;
+	}
+	.dumbBoxOverlay { /* Shades out background when selector is active */
+		position:fixed;
+		width:100%;
+		height:100%;
+		background-color:black;
+		opacity:.8; /* Sets opacity so it's partly transparent */
+		-ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=80)"; /* IE transparency */
+		filter:alpha(opacity=80); /* More IE transparency */
+		z-index:40001;
+	}
+	.vertical-offset { /* Fixed position to provide the vertical offset */
+		position:fixed;
+		width:100%;
+		z-index:40002; /* ensures box appears above overlay */
+	}
+	.dumbBox { /* The actual box, centered in the fixed-position div */
+		width:405px; /* Whatever width you want the box to be */
+		position:relative;
+		margin:0 auto;
+
+		background-color:white;
+		padding:10px;
+		border:1px solid black;
+	}
+
+</style>
+
+
 <script id="gdataalbum.thtml" type="text/ng-template"><div>
-		<div class="gdata-album" ng-controller="gridelementGdataAlbumCtrl">
-			<h1>{{gridelement.Resources.header.Value}}</h1>
+
+	<div class="gdata-album" ng-controller="gridelementGdataAlbumCtrl">
+
+		<h1>{{gridelement.Resources.header.Value}}</h1>
 
 			<h3>{{gridelement.Resources.text.Value}}</h3>
 
-			<div class="first-image grid_3 xxx" class="">
-				<img ngc-lazy-image="firstPhoto.Large.PhotoUri"/>
+			<div class="first-image grid_3 btn-link" ng-click="showImage(gdataAlbumId, 0)" >
+				<img ngc-lazy-image="firstPhoto.Thumbnails[1].PhotoUri"/>
 			</div>
-			<div class="grid_9 xxx">
-				<span ng-repeat="photo in gdataAlbumPhotos">
-					<img ngc-lazy-image="photo.Small.PhotoUri"/>
-				</span>
-			</div>
+		<div class="grid_9">
+				<div ng-repeat="photo in gdataAlbumPhotos" class="image-small">
+					<div ng-click="showImage(gdataAlbumId, $index + 1)" class="btn-link"><img  ngc-lazy-image="photo.Thumbnails[0].PhotoUri"/></div>
+				</div>
 		</div>
-		<div class="clear"></div>
 	</div>
+	<div class="clear"></div>
+</div>
 </script>
 
 
