--- a/index.html
+++ b/index.html
@@ -7,13 +7,18 @@
 	<title>Default PHP Client</title>
 
 	<script type="text/javascript" src="Scripts/libs/jquery.min.js"></script>
-	<script type="text/javascript" src="Scripts/libs/angular.min.js"></script>
+	<script type="text/javascript" src="Scripts/libs/angular.js"></script>
 	<script type="text/javascript" src="Scripts/libs/angular-resource.min.js"></script>
+	<script type="text/javascript" src="Scripts/libs/angular-ui/event.js"></script>
+	<script type="text/javascript" src="Scripts/libs/angular-ui/angular.keypress.js"></script>
+	<script type="text/javascript" src="Scripts/libs/angular-bootstrap/ui-bootstrap-custom-tpls-0.3.0.min.js"></script>
 
 	<script type="text/javascript" src="Scripts/class.apiWrapper.js"></script>
 
 	<script type="text/javascript" src="Scripts/directive.ngcGdataAlbum.js"></script>
 	<script type="text/javascript" src="Scripts/directive.ngcLazyImage.js"></script>
+	<script type="text/javascript" src="Scripts/directive.ngcResponsiveImage.js"></script>
+	<script type="text/javascript" src="Scripts/directive.ngcSimpleDrag.js"></script>
 
 	<script type="text/javascript" src="Scripts/controller.home.js"></script>
 	<script type="text/javascript" src="Scripts/controller.page.js"></script>
@@ -21,6 +26,8 @@
 	<script type="text/javascript" src="Scripts/controller.userDataForm.js"></script>
 	<script type="text/javascript" src="Scripts/controller.gridelementGdataAlbumCtrl.js"></script>
 	<script type="text/javascript" src="Scripts/controller.simplehtml.js"></script>
+	<script type="text/javascript" src="Scripts/controller.galleryImage.js"></script>
+	<script type="text/javascript" src="Scripts/controller.p.js"></script>
 
 	<script type="text/javascript" src="Scripts/module.appConfig.js"></script>
 	<script type="text/javascript" src="Scripts/module.apiModule.js"></script>
@@ -30,16 +37,18 @@
 	<link rel="stylesheet" href="Css/masparti-responsive.css"/>
 	<link rel="stylesheet" href="Css/metro-bootstrap.css"/>
 	<link rel="stylesheet" href="Css/main.css"/>
-
+	<link href='http://fonts.googleapis.com/css?family=Noto+Sans|Courgette|Advent+Pro&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 </head>
 <body>
+<div class="container_12 right" ng-controller="appController">
+	<i ui-event="{ keydown: 'globalKeydown($event)'}" style="display:none"></i>
 
-<div class="container_12">
-	<div class="btn-group">
-		<a class="btn" href="#/home"></i>home</a>
-		<a class="btn" href="#/login">login</a>
-		<a class="btn" href="Service/logout.php">logout</a>
-	</div>
+	<!--<div class="btn-group">-->
+
+		<!--<a class="btn" href="#/home">home</a>-->
+		<!--<a class="btn" href="#/login">login</a>-->
+		<!--<a class="btn" href="Service/cmsClientPHPService/logout.php">logout</a>-->
+	<!--</div>-->
 
 	<div class="alert alert-error" ng-show="message">
 		<b>Chyba:</b>
@@ -48,11 +57,10 @@
 
 	<div ng-view></div>
 
+	<div class="clear"></div>
 </div>
-
-
 </body>
-<script type="text/javascript" src="Scripts/showdown.js"></script>
+<script type="text/javascript" src="Scripts/libs/showdown.js"></script>
 
 </html>
 
