--- a/template.gridelements.html
+++ b/template.gridelements.html
@@ -87,7 +87,16 @@
 		float: left;
 		margin-left: 30px;
 	}
-	.image-small {
+	.gdata-album-list .image-small {
+		padding-top: 10px;
+		padding-left: 0px;
+		padding-right: 10px;
+	}
+	.gdata-album-list .image-small.last {
+		padding-right: 0px;
+	}
+
+	gdata-album .image-small {
 		display: inline-block;
 		padding: 0 10px 10px 0;
 	}
@@ -128,16 +137,17 @@
 
 <script id="gdataalbum.thtml" type="text/ng-template"><div>
 
-	<div class="gdata-album" ng-controller="gridelementGdataAlbumCtrl">
+	<div class="gdata-album-list" ng-controller="gridelementGdataAlbumCtrl">
 
-			<div class="first-image grid_12 btn-link" ng-click="showImage(gdataAlbumId, 0)" >
+			<div class="first-image grid_12 btn-link" ng-click="showImage(gdataAlbumId, 0)" ng-show="firstPhoto">
+				<div style="padding-right:10px">
 				<img ngc-lazy-image="firstPhoto.Large.PhotoUri"/>
+
 			</div>
-		<div class="grid_12">
-				<div ng-repeat="photo in gdataAlbumPhotos" class="image-small">
-					<div ng-click="showImage(gdataAlbumId, $index + 1)" class="btn-link"><img  ngc-lazy-image="photo.Thumbnails[1].PhotoUri"/></div>
-				</div>
-		</div>
+			</div>
+			<div ng-repeat="photo in gdataAlbumPhotos" class="grid_3">
+				<div ng-click="showImage(gdataAlbumId, $index + 1)" class="btn-link  image-small"><img ngc-lazy-image="photo.Thumbnails[1].PhotoUri"/></div>
+			</div>
 	</div>
 	<div class="clear"></div>
 </div>
