--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="robots" content="all,follow" />
+	<meta name="keywords" content="ladesopeklo, ladeso, web ladesoCMS" />
+	<meta name="description" content="LadesoCMS - PHP client test page" />
+	<meta name="google-site-verification" content="n9vDCHVCDFAdyfqfX4MVEp0H7kNTzP_XE3lvB0e36bo" />	
+	
 	<title>Default PHP Client</title>
 
 	<script type="text/javascript" src="Scripts/libs/jquery.min.js"></script>
@@ -38,9 +43,11 @@
 	<link rel="stylesheet" href="Css/metro-bootstrap.css"/>
 	<link rel="stylesheet" href="Css/main.css"/>
 	<link href='http://fonts.googleapis.com/css?family=Noto+Sans|Courgette|Advent+Pro&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+
 </head>
 <body>
 <div class="container_12 right" ng-controller="appController">
+	<div class="xxx" >laskndaskldnklnasdklasXXX</div>
 	<i ui-event="{ keydown: 'globalKeydown($event)'}" style="display:none"></i>
 
 	<!--<div class="btn-group">-->
@@ -60,6 +67,18 @@
 </div>
 </body>
 <script type="text/javascript" src="Scripts/libs/showdown.js"></script>
+
+<script>
+	$(document).ready(function () {
+		$(".xxx").bind("click", function () {
+			console.log("kjasbdjkasd");
+			window.history.pushState('object', 'New Title', "jasbdjasdjasdbkasbkjdjasb");
+		})
+	})
+
+
+</script>
+
 
 </html>
 
