priprava na crawl

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<meta name="keywords" content="ladesopeklo, ladeso, web ladesoCMS" />
 	<meta name="description" content="LadesoCMS - PHP client test page" />
 	<meta name="google-site-verification" content="n9vDCHVCDFAdyfqfX4MVEp0H7kNTzP_XE3lvB0e36bo" />	
+	<meta name="fragment" content="!" />	
 	
 	<title>Default PHP Client</title>
 
@@ -47,7 +48,6 @@
 </head>
 <body>
 <div class="container_12 right" ng-controller="appController">
-	<div class="xxx" >laskndaskldnklnasdklasXXX</div>
 	<i ui-event="{ keydown: 'globalKeydown($event)'}" style="display:none"></i>
 
 	<!--<div class="btn-group">-->
