--- a/index.html
+++ b/index.html
@@ -12,37 +12,37 @@
 	
 	<title>Default PHP Client</title>
 
-	<script type="text/javascript" src="Scripts/libs/jquery.min.js"></script>
-	<script type="text/javascript" src="Scripts/libs/angular.js"></script>
-	<script type="text/javascript" src="Scripts/libs/angular-resource.min.js"></script>
-	<script type="text/javascript" src="Scripts/libs/angular-ui/event.js"></script>
-	<script type="text/javascript" src="Scripts/libs/angular-ui/angular.keypress.js"></script>
-	<script type="text/javascript" src="Scripts/libs/angular-bootstrap/ui-bootstrap-custom-tpls-0.3.0.min.js"></script>
+	<script type="text/javascript" src="/ClientPhp/Scripts/libs/jquery.min.js"></script>
+	<script type="text/javascript" src="/ClientPhp/Scripts/libs/angular.js"></script>
+	<script type="text/javascript" src="/ClientPhp/Scripts/libs/angular-resource.min.js"></script>
+	<script type="text/javascript" src="/ClientPhp/Scripts/libs/angular-ui/event.js"></script>
+	<script type="text/javascript" src="/ClientPhp/Scripts/libs/angular-ui/angular.keypress.js"></script>
+	<script type="text/javascript" src="/ClientPhp/Scripts/libs/angular-bootstrap/ui-bootstrap-custom-tpls-0.3.0.min.js"></script>
 
-	<script type="text/javascript" src="Scripts/class.apiWrapper.js"></script>
+	<script type="text/javascript" src="/ClientPhp/Scripts/class.apiWrapper.js"></script>
 
-	<script type="text/javascript" src="Scripts/directive.ngcGdataAlbum.js"></script>
-	<script type="text/javascript" src="Scripts/directive.ngcLazyImage.js"></script>
-	<script type="text/javascript" src="Scripts/directive.ngcResponsiveImage.js"></script>
-	<script type="text/javascript" src="Scripts/directive.ngcSimpleDrag.js"></script>
+	<script type="text/javascript" src="/ClientPhp/Scripts/directive.ngcGdataAlbum.js"></script>
+	<script type="text/javascript" src="/ClientPhp/Scripts/directive.ngcLazyImage.js"></script>
+	<script type="text/javascript" src="/ClientPhp/Scripts/directive.ngcResponsiveImage.js"></script>
+	<script type="text/javascript" src="/ClientPhp/Scripts/directive.ngcSimpleDrag.js"></script>
 
-	<script type="text/javascript" src="Scripts/controller.home.js"></script>
-	<script type="text/javascript" src="Scripts/controller.page.js"></script>
-	<script type="text/javascript" src="Scripts/controller.login.js"></script>
-	<script type="text/javascript" src="Scripts/controller.userDataForm.js"></script>
-	<script type="text/javascript" src="Scripts/controller.gridelementGdataAlbumCtrl.js"></script>
-	<script type="text/javascript" src="Scripts/controller.simplehtml.js"></script>
-	<script type="text/javascript" src="Scripts/controller.galleryImage.js"></script>
-	<script type="text/javascript" src="Scripts/controller.p.js"></script>
+	<script type="text/javascript" src="/ClientPhp/Scripts/controller.home.js"></script>
+	<script type="text/javascript" src="/ClientPhp/Scripts/controller.page.js"></script>
+	<script type="text/javascript" src="/ClientPhp/Scripts/controller.login.js"></script>
+	<script type="text/javascript" src="/ClientPhp/Scripts/controller.userDataForm.js"></script>
+	<script type="text/javascript" src="/ClientPhp/Scripts/controller.gridelementGdataAlbumCtrl.js"></script>
+	<script type="text/javascript" src="/ClientPhp/Scripts/controller.simplehtml.js"></script>
+	<script type="text/javascript" src="/ClientPhp/Scripts/controller.galleryImage.js"></script>
+	<script type="text/javascript" src="/ClientPhp/Scripts/controller.p.js"></script>
 
-	<script type="text/javascript" src="Scripts/module.appConfig.js"></script>
-	<script type="text/javascript" src="Scripts/module.apiModule.js"></script>
-	<script type="text/javascript" src="Scripts/module.defaultClient.js"></script>
+	<script type="text/javascript" src="/ClientPhp/Scripts/module.appConfig.js"></script>
+	<script type="text/javascript" src="/ClientPhp/Scripts/module.apiModule.js"></script>
+	<script type="text/javascript" src="/ClientPhp/Scripts/module.defaultClient.js"></script>
 
-	<link rel="stylesheet" href="Css/fluid_grid.css"/>
-	<link rel="stylesheet" href="Css/masparti-responsive.css"/>
-	<link rel="stylesheet" href="Css/metro-bootstrap.css"/>
-	<link rel="stylesheet" href="Css/main.css"/>
+	<link rel="stylesheet" href="/ClientPhp/Css/fluid_grid.css"/>
+	<link rel="stylesheet" href="/ClientPhp/Css/masparti-responsive.css"/>
+	<link rel="stylesheet" href="/ClientPhp/Css/metro-bootstrap.css"/>
+	<link rel="stylesheet" href="/ClientPhp/Css/main.css"/>
 	<link href='http://fonts.googleapis.com/css?family=Noto+Sans|Courgette|Advent+Pro&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 
 </head>
@@ -66,7 +66,7 @@
 	<div class="clear"></div>
 </div>
 </body>
-<script type="text/javascript" src="Scripts/libs/showdown.js"></script>
+<script type="text/javascript" src="/ClientPhp/Scripts/libs/showdown.js"></script>
 
 <script>
 	$(document).ready(function () {
