--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 	<meta name="fragment" content="!" />	
 	
 	<title>Default PHP Client</title>
+	<link rel="stylesheet" href="Css/css.min.css"/>
+	<link href='http://fonts.googleapis.com/css?family=Noto+Sans|Courgette|Advent+Pro&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+
 
 	<script type="text/javascript" src="Scripts/libs/jquery.min.js"></script>
 	<script type="text/javascript" src="Scripts/libs/angular.min.js"></script>
@@ -18,8 +21,9 @@
 
 	<script type="text/javascript" src="Scripts/libs/angular-ui/event.js"></script>
 	<script type="text/javascript" src="Scripts/libs/angular-ui/angular.keypress.js"></script>
-	<script type="text/javascript" src="Scripts/libs/angular-bootstrap/ui-bootstrap-custom-tpls-0.3.0.min.js"></script>
 
+	<!--<script type="text/javascript" src="Scripts/libs/showdown.js"></script>-->
+	<!--<script type="text/javascript" src="Scripts/libs/angular-bootstrap/ui-bootstrap-custom-tpls-0.3.0.min.js"></script>-->
 	<!--<script type="text/javascript" src="Scripts/class.apiWrapper.js"></script>-->
 
 	<!--<script type="text/javascript" src="Scripts/directive.ngcGdataAlbum.js"></script>-->
@@ -40,14 +44,13 @@
 	<!--<script type="text/javascript" src="Scripts/module.apiModule.js"></script>-->
 	<!--<script type="text/javascript" src="Scripts/module.defaultClient.js"></script>-->
 
+
+	<!--<link rel="stylesheet" href="Css/fluid_grid.css"/>-->
+	<!--<link rel="stylesheet" href="Css/masparti-responsive.css"/>-->
+	<!--<link rel="stylesheet" href="Css/metro-bootstrap.css"/>-->
+	<!--<link rel="stylesheet" href="Css/main.css"/>-->
+
 	<script type="text/javascript" src="Scripts/libs.min.js"></script>
-
-	<link rel="stylesheet" href="Css/fluid_grid.css"/>
-	<link rel="stylesheet" href="Css/masparti-responsive.css"/>
-	<link rel="stylesheet" href="Css/metro-bootstrap.css"/>
-	<link rel="stylesheet" href="Css/main.css"/>
-	<link href='http://fonts.googleapis.com/css?family=Noto+Sans|Courgette|Advent+Pro&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
-
 </head>
 <body>
 <div class="container_12 right" ng-controller="appController">
@@ -69,7 +72,6 @@
 	<div class="clear"></div>
 </div>
 </body>
-<script type="text/javascript" src="Scripts/libs/showdown.js"></script>
 
 <script>
 	angular.element(document).ready(function () {
@@ -77,8 +79,6 @@
 
 	$(document).ready(function () {
 	})
-
-
 </script>
 
 
