--- a/index.html
+++ b/index.html
@@ -4,16 +4,20 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="robots" content="all,follow" />
-	<meta name="keywords" content="ladesopeklo, ladeso, web ladesoCMS" />
-	<meta name="description" content="LadesoCMS - PHP client test page" />
-	<meta name="google-site-verification" content="n9vDCHVCDFAdyfqfX4MVEp0H7kNTzP_XE3lvB0e36bo" />	
-	<meta name="fragment" content="!" />	
-	
-	<title>Default PHP Client</title>
-	<link rel="stylesheet" href="Css/css.min.css"/>
-	<link href='http://fonts.googleapis.com/css?family=Noto+Sans|Courgette|Advent+Pro&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+	<meta name="robots" content="all,follow"/>
+	<meta name="keywords" content="ladesopeklo, ladeso, web ladesoCMS"/>
+	<meta name="description" content="LadesopekloCMS - PHP client test page"/>
+	<meta name="google-site-verification" content="n9vDCHVCDFAdyfqfX4MVEp0H7kNTzP_XE3lvB0e36bo"/>
+	<meta name="fragment" content="!"/>
 
+	<title>Ladesopeklo - Default PHP Client</title>
+	<!--<link rel="stylesheet" href="Css/fluid_grid.css"/>-->
+	<!--<link rel="stylesheet" href="Css/masparti-responsive.css"/>-->
+	<!--<link rel="stylesheet" href="Css/metro-bootstrap.css"/>-->
+	<!--<link rel="stylesheet" href="Css/main.css"/>-->
+	<link rel="stylesheet" href="Css/css.min.css"/>
+
+	<link href='http://fonts.googleapis.com/css?family=Noto+Sans|Courgette|Advent+Pro&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 
 	<script type="text/javascript" src="Scripts/libs/jquery.min.js"></script>
 	<script type="text/javascript" src="Scripts/libs/angular.min.js"></script>
@@ -22,47 +26,43 @@
 	<script type="text/javascript" src="Scripts/libs/angular-ui/event.js"></script>
 	<script type="text/javascript" src="Scripts/libs/angular-ui/angular.keypress.js"></script>
 
-	<!--<script type="text/javascript" src="Scripts/libs/showdown.js"></script>-->
-	<!--<script type="text/javascript" src="Scripts/libs/angular-bootstrap/ui-bootstrap-custom-tpls-0.3.0.min.js"></script>-->
-	<!--<script type="text/javascript" src="Scripts/class.apiWrapper.js"></script>-->
+	<!--<script type="text/javascript" src="Scripts/libs.min.js"></script>-->
 
-	<!--<script type="text/javascript" src="Scripts/directive.ngcGdataAlbum.js"></script>-->
-	<!--<script type="text/javascript" src="Scripts/directive.ngcLazyImage.js"></script>-->
-	<!--<script type="text/javascript" src="Scripts/directive.ngcResponsiveImage.js"></script>-->
-	<!--<script type="text/javascript" src="Scripts/directive.ngcSimpleDrag.js"></script>-->
+	<script type="text/javascript" src="Scripts/libs/showdown.js"></script>
+	<script type="text/javascript" src="Scripts/libs/angular-bootstrap/ui-bootstrap-custom-tpls-0.3.0.min.js"></script>
+	<script type="text/javascript" src="Scripts/class.apiWrapper.js"></script>
 
-	<!--<script type="text/javascript" src="Scripts/controller.home.js"></script>-->
-	<!--<script type="text/javascript" src="Scripts/controller.page.js"></script>-->
-	<!--<script type="text/javascript" src="Scripts/controller.login.js"></script>-->
-	<!--<script type="text/javascript" src="Scripts/controller.userDataForm.js"></script>-->
-	<!--<script type="text/javascript" src="Scripts/controller.gridelementGdataAlbumCtrl.js"></script>-->
-	<!--<script type="text/javascript" src="Scripts/controller.simplehtml.js"></script>-->
-	<!--<script type="text/javascript" src="Scripts/controller.galleryImage.js"></script>-->
-	<!--<script type="text/javascript" src="Scripts/controller.p.js"></script>-->
+	<script type="text/javascript" src="Scripts/directive.ngcGdataAlbum.js"></script>
+	<script type="text/javascript" src="Scripts/directive.ngcLazyImage.js"></script>
+	<script type="text/javascript" src="Scripts/directive.ngcResponsiveImage.js"></script>
+	<script type="text/javascript" src="Scripts/directive.ngcSimpleDrag.js"></script>
 
-	<!--<script type="text/javascript" src="Scripts/module.appConfig.js"></script>-->
-	<!--<script type="text/javascript" src="Scripts/module.apiModule.js"></script>-->
-	<!--<script type="text/javascript" src="Scripts/module.defaultClient.js"></script>-->
+	<script type="text/javascript" src="Scripts/controller.home.js"></script>
+	<script type="text/javascript" src="Scripts/controller.page.js"></script>
+	<script type="text/javascript" src="Scripts/controller.login.js"></script>
+	<script type="text/javascript" src="Scripts/controller.userDataForm.js"></script>
+	<script type="text/javascript" src="Scripts/controller.gridelementGdataAlbumCtrl.js"></script>
+	<script type="text/javascript" src="Scripts/controller.simplehtml.js"></script>
+	<script type="text/javascript" src="Scripts/controller.galleryImage.js"></script>
+	<script type="text/javascript" src="Scripts/controller.p.js"></script>
+
+	<script type="text/javascript" src="Scripts/module.appConfig.js"></script>
+	<script type="text/javascript" src="Scripts/module.apiModule.js"></script>
+	<script type="text/javascript" src="Scripts/module.defaultClient.js"></script>
 
 
-	<!--<link rel="stylesheet" href="Css/fluid_grid.css"/>-->
-	<!--<link rel="stylesheet" href="Css/masparti-responsive.css"/>-->
-	<!--<link rel="stylesheet" href="Css/metro-bootstrap.css"/>-->
-	<!--<link rel="stylesheet" href="Css/main.css"/>-->
-
-	<script type="text/javascript" src="Scripts/libs.min.js"></script>
 </head>
 <body>
 <div class="container_12 right" ng-controller="appController">
 	<i ui-event="{ keydown: 'globalKeydown($event)'}" style="display:none"></i>
 
 	<!--<div class="btn-group">-->
-		<!--<a class="btn" href="#/home">home</a>-->
-		<!--<a class="btn" href="#/login">login</a>-->
-		<!--<a class="btn" href="Service/cmsClientPHPService/logout.php">logout</a>-->
+	<!--<a class="btn" href="#/home">home</a>-->
+	<!--<a class="btn" href="#/login">login</a>-->
+	<!--<a class="btn" href="Service/cmsClientPHPService/logout.php">logout</a>-->
 	<!--</div>-->
 
-	<div class="alert alert-error" ng-show="message" >
+	<div class="alert alert-error" ng-show="message">
 		<b>Chyba:</b>
 		{{message}}
 	</div>
@@ -72,15 +72,5 @@
 	<div class="clear"></div>
 </div>
 </body>
-
-<script>
-	angular.element(document).ready(function () {
-	});
-
-	$(document).ready(function () {
-	})
-</script>
-
-
 </html>
 
