oprava gallery viewveru

--- a/snapshots/p/gallery_1/0.html
+++ b/snapshots/p/gallery_1/0.html
@@ -8,11 +8,11 @@
 	<meta name="fragment" content="!">
 
 	<title>Ladesopeklo - Default PHP Client</title>
-	<!--<link rel="stylesheet" href="Css/fluid_grid.css"/>-->
-	<!--<link rel="stylesheet" href="Css/masparti-responsive.css"/>-->
-	<!--<link rel="stylesheet" href="Css/metro-bootstrap.css"/>-->
-	<!--<link rel="stylesheet" href="Css/main.css"/>-->
-	<link rel="stylesheet" href="Css/css.min.css">
+	<link rel="stylesheet" href="Css/fluid_grid.css">
+	<link rel="stylesheet" href="Css/masparti-responsive.css">
+	<link rel="stylesheet" href="Css/metro-bootstrap.css">
+	<link rel="stylesheet" href="Css/main.css">
+	<!--<link rel="stylesheet" href="Css/css.min.css"/>-->
 
 	<link href="http://fonts.googleapis.com/css?family=Noto+Sans|Courgette|Advent+Pro&amp;subset=latin,latin-ext" rel="stylesheet" type="text/css">
 
@@ -40,7 +40,7 @@
 	<script type="text/javascript" src="Scripts/controller.userDataForm.js"></script>
 	<script type="text/javascript" src="Scripts/controller.gridelementGdataAlbumCtrl.js"></script>
 	<script type="text/javascript" src="Scripts/controller.simplehtml.js"></script>
-	<script type="text/javascript" src="Scripts/controller.galleryImage.js"></script>
+	<script type="text/javascript" src="Scripts/controller.galleryImageViewer.js"></script>
 	<script type="text/javascript" src="Scripts/controller.p.js"></script>
 
 	<script type="text/javascript" src="Scripts/module.appConfig.js"></script>
