--- a/snapshots/home.html
+++ b/snapshots/home.html
@@ -8,11 +8,11 @@
 	<meta name="fragment" content="!">
 
 	<title>Ladesopeklo - Default PHP Client</title>
-	<!--<link rel="stylesheet" href="Css/fluid_grid.css"/>-->
-	<!--<link rel="stylesheet" href="Css/masparti-responsive.css"/>-->
-	<!--<link rel="stylesheet" href="Css/metro-bootstrap.css"/>-->
-	<!--<link rel="stylesheet" href="Css/main.css"/>-->
-	<link rel="stylesheet" href="Css/css.min.css">
+	<link rel="stylesheet" href="Css/fluid_grid.css">
+	<link rel="stylesheet" href="Css/masparti-responsive.css">
+	<link rel="stylesheet" href="Css/metro-bootstrap.css">
+	<link rel="stylesheet" href="Css/main.css">
+	<!--<link rel="stylesheet" href="Css/css.min.css"/>-->
 
 	<link href="http://fonts.googleapis.com/css?family=Noto+Sans|Courgette|Advent+Pro&amp;subset=latin,latin-ext" rel="stylesheet" type="text/css">
 
@@ -45,11 +45,11 @@
 
 	<script type="text/javascript" src="Scripts/module.appConfig.js"></script>
 	<script type="text/javascript" src="Scripts/module.apiModule.js"></script>
-	<script type="text/javascript" src="Scripts/module.defaultClient.js"></script>
+	<script type="text/javascript" src="Scripts/module.defaultClient.js"></script> </head><body style="">--&gt;
 
 
-</head>
-<body style="">
+
+
 <div class="container_12 right ng-scope" ng-controller="appController">
 	<i ui-event="{ keydown: 'globalKeydown($event)'}" style="display:none"></i>
 
