--- a/snapshots/home.html
+++ b/snapshots/home.html
@@ -40,16 +40,16 @@
 	<script type="text/javascript" src="Scripts/controller.userDataForm.js"></script>
 	<script type="text/javascript" src="Scripts/controller.gridelementGdataAlbumCtrl.js"></script>
 	<script type="text/javascript" src="Scripts/controller.simplehtml.js"></script>
-	<script type="text/javascript" src="Scripts/controller.galleryImage.js"></script>
+	<script type="text/javascript" src="Scripts/controller.galleryImageViewer.js"></script>
 	<script type="text/javascript" src="Scripts/controller.p.js"></script>
 
 	<script type="text/javascript" src="Scripts/module.appConfig.js"></script>
 	<script type="text/javascript" src="Scripts/module.apiModule.js"></script>
-	<script type="text/javascript" src="Scripts/module.defaultClient.js"></script> </head><body style="">--&gt;
+	<script type="text/javascript" src="Scripts/module.defaultClient.js"></script>
 
 
-
-
+</head>
+<body style="">
 <div class="container_12 right ng-scope" ng-controller="appController">
 	<i ui-event="{ keydown: 'globalKeydown($event)'}" style="display:none"></i>
 
