--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 	<meta name="fragment" content="!"/>
 
 	<title>Ladesopeklo - Default PHP Client</title>
-<!--	<link rel="stylesheet" href="Css/fluid_grid.css"/>
-	<link rel="stylesheet" href="Css/masparti-responsive.css"/>
-	<link rel="stylesheet" href="Css/metro-bootstrap.css"/>
-	<link rel="stylesheet" href="Css/main.css"/>-->
+	<!--<link rel="stylesheet" href="Css/fluid_grid.css"/>-->
+	<!--<link rel="stylesheet" href="Css/masparti-responsive.css"/>-->
+	<!--<link rel="stylesheet" href="Css/metro-bootstrap.css"/>-->
+	<!--<link rel="stylesheet" href="Css/main.css"/>-->
 	<link rel="stylesheet" href="Css/css.min.css"/>
 
 	<link href='http://fonts.googleapis.com/css?family=Noto+Sans|Courgette|Advent+Pro&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
@@ -26,9 +26,9 @@
 	<script type="text/javascript" src="Scripts/libs/angular-ui/event.js"></script>
 	<script type="text/javascript" src="Scripts/libs/angular-ui/angular.keypress.js"></script>
 
-	<script type="text/javascript" src="Scripts/libs.min.js"></script>
+	<!--<script type="text/javascript" src="Scripts/libs.min.js"></script>-->
 
-	<!-- <script type="text/javascript" src="Scripts/libs/showdown.js"></script>
+	<script type="text/javascript" src="Scripts/libs/showdown.js"></script>
 	<script type="text/javascript" src="Scripts/libs/angular-bootstrap/ui-bootstrap-custom-tpls-0.3.0.min.js"></script>
 	<script type="text/javascript" src="Scripts/class.apiWrapper.js"></script>
 
@@ -48,7 +48,7 @@
 
 	<script type="text/javascript" src="Scripts/module.appConfig.js"></script>
 	<script type="text/javascript" src="Scripts/module.apiModule.js"></script>
-	<script type="text/javascript" src="Scripts/module.defaultClient.js"></script> -->
+	<script type="text/javascript" src="Scripts/module.defaultClient.js"></script>
 
 
 </head>
