--- a/index.html
+++ b/index.html
@@ -5,17 +5,18 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="robots" content="all,follow"/>
-	<meta name="keywords" content="ladesopeklo, ladeso, web ladesoCMS"/>
-	<meta name="description" content="LadesopekloCMS - PHP client test page"/>
+	<meta name="keywords" content="umělecký řezbář, Šternberk, restaurování, vyřezávání, dřevořezba, řezbářství, dřevo, tomka"/>
+	<meta name="description" content="Dělám řezbařinu. Prohlédněte si mou tvorbu."/>
 	<meta name="google-site-verification" content="n9vDCHVCDFAdyfqfX4MVEp0H7kNTzP_XE3lvB0e36bo"/>
 	<meta name="fragment" content="!"/>
 
-	<title>Ladesopeklo - Default PHP Client</title>
-	<!--<link rel="stylesheet" href="Css/fluid_grid.css"/>-->
-	<!--<link rel="stylesheet" href="Css/masparti-responsive.css"/>-->
-	<!--<link rel="stylesheet" href="Css/metro-bootstrap.css"/>-->
-	<!--<link rel="stylesheet" href="Css/main.css"/>-->
-	<link rel="stylesheet" href="Css/css.min.css"/>
+	<title>Jaromír Tomka - Umělecký řezbář</title>
+	<link rel="stylesheet" href="Css/fluid_grid.css"/>
+	<link rel="stylesheet" href="Css/masparti-responsive.css"/>
+	<link rel="stylesheet" href="Css/metro-bootstrap.css"/>
+	<link rel="stylesheet" href="Css/main.css"/>
+
+	<!--<link rel="stylesheet" href="Css/css.min.css"/>-->
 
 	<link href='http://fonts.googleapis.com/css?family=Noto+Sans|Courgette|Advent+Pro&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 
