--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<link rel="stylesheet" href="Css/fluid_grid.css"/>
 	<link rel="stylesheet" href="Css/metro-bootstrap.css"/>
 	<link rel="stylesheet" href="Css/masparti-responsive.css"/>
-	<link rel="stylesheet" href="Css/main.css"/>
+	<link rel="stylesheet" href="Css/main.less"/>
 	<link rel="stylesheet" href="Css/font-awesome/css/font-awesome.min.css"/>
 
 	<!--<link rel="stylesheet" href="Css/css.min.css"/>-->
@@ -54,10 +54,11 @@
 
 
 </head>
-<body>
-<div class="container_12 right" ng-controller="appController">
+<body ng-controller="appController">
 
 	<i ui-event="{ keydown: 'globalKeydown($event)'}" style="display:none"></i>
+
+	<div class="clear"></div>
 
 	<!--<div class="btn-group">-->
 	<!--<a class="btn" href="#/home">home</a>-->
@@ -78,7 +79,6 @@
 
 
 	<div class="clear"></div>
-</div>
 </body>
 </html>
 
